[gd_scene load_steps=4 format=2]

[ext_resource path="res://Artifacts(and RougeManager)/RelicIndicator.gd" type="Script" id=1]
[ext_resource path="res://Assets/RelicIndicators/Disruptor.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="TextureRect" type="TextureRect"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
mouse_default_cursor_shape = 8
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="RelicIndicator" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="RelicIndicator"]
z_index = 2
priority = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RelicIndicator/Area2D"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 42.0
margin_right = 105.0
margin_bottom = 63.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CHEBURNET"

[connection signal="input_event" from="RelicIndicator/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="RelicIndicator/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="RelicIndicator/Area2D" to="." method="_on_Area2D_mouse_exited"]
